force-app/main/default/objects/Group_By_Agency__c/Group_By_Agency__c.object-meta.xml
<CustomObject>
    <label>Group By Agency</label>
    <nameField>
        <label>Group By Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group By Agencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>