force-app/main/default/objects/Group_By_Agency__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Group By Agencies</relationshipLabel>
    <relationshipName>Group_By_Agencies</relationshipName>
    <type>Lookup</type>
</CustomField>