force-app/main/default/objects/Group_By_Agency__c/fields/Total_Seat_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Seat_Sales__c</fullName>
    <label>Total_Seat_Sales</label>
    <summarizedField>AgencyReport__c.Total_Seat_Sales__c</summarizedField>
    <summaryForeignKey>AgencyReport__c.Group_By_Agency__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>