force-app/main/default/objects/Group_By_Agency__c/fields/WaypointOutside__c.field-meta.xml
<CustomField>
    <fullName>WaypointOutside__c</fullName>
    <label>Waypoint(Outside)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Airport_Location</valueSetName>
    </valueSet>
</CustomField>